@@ -1,6 +1,7 @@
 <b>2012-03-11</b>
 
 * Bugfix: Add a proper background behind the layer selector and expand based on text contents.
+* Change the font color on the map to white when using the blue marble map layer.
 
 <b>2012-03-03</b>
 
